crates/rattler_macros/tests/03-out-of-order-enum.rs
use rattler_macros::sorted;

#[sorted]
pub enum Alphabet {
    BBB,
    A,
    C,
    XYZ,
    Z
}

fn main() {}
